test/regression/src/test/idl/compiler/fail/bugjac731.idl
module org
{
    module jacorb
    {
        module test
        {
            module bugs
            {
                module bugjac731
                {
                    union I;
                    interface I
                    {
                        void doSomething();
                    };
                };
            };
        };
    };
};
